Goat homework